# basic-ecommerce

./: .gitignore  Makefile  README.md  compose.yaml
db/: .env  Dockerfile  init.sql
db/migrations/: 20230827173937_products.down.sql  20230827173937_products.up.sql  20230904143125_make-tables.down.sql  20230904143125_make-tables.up.sql
frontend/: Dockerfile
frontend/src/: App.js
server-api/: .env  Cargo.toml  Dockerfile
server-api/src/: main.rs
server-api/src/Order/: OrderEntity.rs  mod.rs  order_controllers.rs  order_entity.rs  order_services.rs
server-api/src/Product/: ProductControllers.rs  ProductEntity.rs  ProductServices.rs  mod.rs  product_controllers.rs  product_services.rs
server-api/src/user/: mod.rs  user_controllers.rs  user_entity.rs  user_services.rs
