[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid", "time", "chrono" ] }
actix-cors = "0.6.4"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
serde = "1.0.188"
serde_json = "1.0.105"
dotenv = "0.15.0"
chrono = { version = "0.4.28", features = ["serde"] }